[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "answering-machine"
version = "0.0.4"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
]
description = "A machine that answers questions."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["answering-machine"]

dependencies = [
    "electroid >= 0.0.16",
    "PyGithub >= 2.6.0",
    "PyYAML >= 6.0.1",
    "urllib3 >= 2.0.4",
    "requests >= 2.32.3",
    "click >= 8.3.0"
]

[project.scripts]
answering-machine = "answering_machine.cli:main"

[project.urls]
"Homepage" = "https://github.com/answering-machine/answering-machine"
"Bug Tracker" = "https://github.com/answering-machine/answering-machine/issues"